--- a/public/md/1.md
+++ b/public/md/1.md
@@ -1,3 +1,8 @@
 
 # まくら
 
+ - 最後なのでちょっとまじめに
+ - まじめにやるかどうかは迷った
+ - ウケが狙えそうなネタがなかった
+ - Google ChromeがCSS Grid Layoutを正式にサポートするって記事を最近見た
+ - 他にもWebAssemblyとかWebGL2.0とかいろんなキーワードがあったけど、いつか誰かがやってくれるって信じてる
