サンプル追加

--- a/public/md/3.md
+++ b/public/md/3.md
@@ -5,4 +5,27 @@
 ブラウザのバージョンを確認する。
 57以降じゃないと表示されない
 
+ - chrome://flags/でExperimental Web Platform featuresを有効にする
 
+## grid
+
+ - [MDN](https://developer.mozilla.org/ja/docs/Web/CSS/CSS_Grid_Layout "MDN")
+　- リピート関数repeat(3, 300px)
+ - minmax(200px, 1fr)
+
+
+grid-row: auto;
+grid-row: auto / auto;
+grid-row: somegridarea;
+grid-row: somegridarea / someothergridarea;
+grid-row: somegridarea 4;
+grid-row: 4 somegridarea / 6;
+grid-row: span 3;
+grid-row: span somegridarea;
+grid-row: 5 somegridarea span;
+grid-row: span 3 / 6;
+grid-row: span somegridarea / span someothergridarea;
+grid-row: 5 somegridarea span / 2 span;
+grid-row: inherit;
+grid-row: initial;
+grid-row: unset;
