カンペ修正

--- a/public/md/4.md
+++ b/public/md/4.md
@@ -4,7 +4,7 @@
 ## Naming lines
 
  - [Naming lines](https://developer.mozilla.org/en-US/docs/Glossary/Grid_Lines "Naming lines")
-　- なんか名付けとかできるらしい
+　- なんか名付けとかできるらしい　エイリアスだな
  - start名からend名までの間の行、列
 
 
