--- a/public/md/1.md
+++ b/public/md/1.md
@@ -6,3 +6,4 @@
  - ウケが狙えそうなネタがなかった
  - Google ChromeがCSS Grid Layoutを正式にサポートするって記事を最近見た
  - 他にもWebAssemblyとかWebGL2.0とかいろんなキーワードがあったけど、いつか誰かがやってくれるって信じてる
+ - 目指せ5分
